@@ -1,3 +1,15 @@
+2017-07-17  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        Unreviewed, rolling out r219556.
+
+        Broke build without WebCrypto
+
+        Reverted changeset:
+
+        "[CMake] Clean up Web Crypto build targets"
+        https://bugs.webkit.org/show_bug.cgi?id=174253
+        http://trac.webkit.org/changeset/219556
+
 2017-07-17  Antoine Quint  <graouts@apple.com>
 
         Media controls draw behind captions
